# ai-rpa

./: .gitignore  CONTRIBUTING.md  README.md  README_CN.md  aivane.apk
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: python-device-tests.yml  python-publish.yml  python-tests.yml
clients/python/: README.md  agent-android.py  pyproject.toml
clients/python/agent_android/: cli.py  client.py  formatting.py  repl.py
clients/python/src/agent_android/: __init__.py  cli.py  client.py  config.py  repl.py
clients/python/tests/: conftest.py
clients/python/tests/device/: test_android_device_smoke.py
clients/python/tests/unit/: test_cli.py  test_client.py  test_packaging_metadata.py  test_repl.py
docs/: agent-examples.md  feedback.md  github-metadata.md  install-agent-android.md  known-limitations.md  launch-assets-checklist.md  permissions.md  quickstart.md  release-checklist.md  release-notes-v0.1.0-beta.md  skill-listing.md
examples/: smoke-flow.md  start-app-repl.ps1
skills/: README.md
skills/agent-android/: SKILL.md
skills/agent-android/references/: smoke-flow.md
