[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aivane-agent-android"
dynamic = ["version"]
description = "Local-first Android UI automation CLI for the AIVane Android REPL beta"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "AIVane Labs" }]
keywords = ["android", "automation", "cli", "repl", "agent"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/aivanelabs/ai-rpa"
Issues = "https://github.com/aivanelabs/ai-rpa/issues"
Repository = "https://github.com/aivanelabs/ai-rpa"

[project.scripts]
agent-android = "agent_android.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "agent_android.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
